<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ObjectOrientedArchitectureDiagrammer</groupId>
    <artifactId>ObjectOrientedArchitectureDiagrammer</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
    </properties>
    <name>ObjectOrientedArchitectureDiagrammer</name>
    <description>A tool for the reverse engineering of Java-oriented source code into UML diagrams</description>

    <repositories>
        <repository>
            <id>JavaFXSmartGraph</id>
            <name>JavaFXSmartGraph</name>
            <url>file://${pom.basedir}/libs/JavaFXSmartGraph</url>
        </repository>
        <repository>
            <id>PlantUML</id>
            <name>PlantUML</name>
            <url>file://${pom.basedir}/libs/PlantUML</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>org.eclipse.jdt.core</artifactId>
            <version>3.28.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
          <dependency>
              <groupId>org.junit.jupiter</groupId>
              <artifactId>junit-jupiter-api</artifactId>
              <version>5.9.2</version>
          </dependency>
          <dependency>
              <groupId>org.junit.jupiter</groupId>
              <artifactId>junit-jupiter</artifactId>
              <version>5.9.2</version>
              <scope>test</scope>
          </dependency>
          <dependency>
              <groupId>junit</groupId>
              <artifactId>junit</artifactId>
              <version>4.13.2</version>
              <scope>test</scope>
          </dependency>
          <dependency>
              <groupId>net.sf.jung</groupId>
              <artifactId>jung-algorithms</artifactId>
              <version>2.1.1</version>
          </dependency>
          <dependency>
              <groupId>net.sf.jung</groupId>
              <artifactId>jung-graph-impl</artifactId>
              <version>2.1.1</version>
          </dependency>
          <dependency>
              <groupId>net.sf.jung</groupId>
              <artifactId>jung-visualization</artifactId>
              <version>2.1.1</version>
          </dependency>
          <dependency>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
              <version>18.0.1</version>
          </dependency>
          <dependency>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-fxml</artifactId>
              <version>18.0.1</version>
          </dependency>
          <dependency>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-web</artifactId>
              <version>18.0.1</version>
          </dependency>
          <dependency>
              <groupId>com.sirolf2009</groupId>
              <artifactId>fxgraph</artifactId>
              <version>0.0.3</version>
          </dependency>
        <dependency>
            <groupId>JavaFXSmartGraph</groupId>
            <artifactId>JavaFXSmartGraph</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>PlantUML</groupId>
            <artifactId>PlantUML</artifactId>
            <version>1.2023.7</version>
        </dependency>
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-core</artifactId>
            <version>3.25.3</version>
        </dependency>
        <dependency>
            <groupId>org.javatuples</groupId>
            <artifactId>javatuples</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
    </dependencies>
    <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-site-plugin</artifactId>
            <version>3.7.1</version>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-project-info-reports-plugin</artifactId>
            <version>3.0.0</version>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                    <configuration>
                        <archive>
                            <manifest>
                                <mainClass>
                                    view/AppStarter
                                </mainClass>
                            </manifest>
                        </archive>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
              <release>14</release>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-maven-plugin</artifactId>
            <version>0.0.8</version>
            <configuration>
                <mainClass>MainApp</mainClass>
            </configuration>
        </plugin>
    </plugins>
    </build>
</project>